# desdeo-emo

./: .gitignore  .readthedocs.yml  3dscatter.html  Comparison.ods  DTLZ3_2.html  DTLZ3_3.html  DTLZ3_4.html  DTLZ3_5.html  DTLZ3_6.html  Example.ipynb  Example.py  LICENSE  Pipfile  README.md  RVEA.py  Rvea.ipynb  SlowRVEA.ipynb  Untitled.ipynb  ZDT1_100.xls  ZDT1_1000.xls  _trend  allclasses.py  compare.ipynb  conf.py  environment.yml  evodn2_example.py  evodn2_vs_mlp.py  evonn_example.py  examples  firsttest.html  index.rst  initializations.py  model_management.py  newRV.py  parallelplot.html  plotlyanimate.py  plotlyscrap.py  plotlyworld.py  pyhv.py  pyproject.toml  (+9 more)
.docs/: index.rst  pyrvea.Population.rst
RVEA/: pyRVEA.py  rvea_start.py
desdeo-problem-master/: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
desdeo-problem-master/.github/workflows/: DESDEO-problem.yml
desdeo-problem-master/desdeo_problem/: __init__.py
desdeo-problem-master/desdeo_problem/testproblems/: RiverPollution.py  __init__.py
desdeo-problem-master/desdeo_problem/testproblems/DBMOPP/: DBMOPP_generator.py  Region.py
desdeo-problem-master/docs/: 404.rst  api.rst  conf.py  examples.rst  index.rst
desdeo-problem-master/docs/api/: desdeo_problem.Constraint.ConstraintBase.rst  desdeo_problem.Constraint.ConstraintError.rst  desdeo_problem.Constraint.ScalarConstraint.rst  desdeo_problem.Constraint.constraint_function_factory.rst  desdeo_problem.Objective.ObjectiveBase.rst  desdeo_problem.Objective.ObjectiveError.rst  desdeo_problem.Objective.ObjectiveEvaluationResults.rst  desdeo_problem.Objective.VectorDataObjective.rst  desdeo_problem.Objective.VectorObjective.rst  desdeo_problem.Objective.VectorObjectiveBase.rst  desdeo_problem.Problem.DataProblem.rst  desdeo_problem.Problem.EvaluationResults.rst  desdeo_problem.Problem.ExperimentalProblem.rst  desdeo_problem.Problem.MOProblem.rst  desdeo_problem.Problem.ProblemBase.rst  desdeo_problem.Problem.ProblemError.rst  desdeo_problem.Problem.ScalarDataProblem.rst  desdeo_problem.Problem.ScalarMOProblem.rst  desdeo_problem.Problem.number_of_objectives.rst  desdeo_problem.Variable.Variable.rst  desdeo_problem.Variable.VariableBuilderError.rst  desdeo_problem.Variable.VariableError.rst  desdeo_problem.Variable.variable_builder.rst  desdeo_problem.surrogatemodels.BaseRegressor.rst  desdeo_problem.surrogatemodels.GaussianProcessRegressor.rst  desdeo_problem.surrogatemodels.LipschitzianRegressor.rst  desdeo_problem.surrogatemodels.ModelError.rst  desdeo_problem.testproblems.test_problem_builder.rst
desdeo-problem-master/docs/notebooks/: Benchmark_problems.ipynb  DBMOPP_tutorial.ipynb  Defining_a_data_based_problem.ipynb  Defining_a_problem.ipynb  Lipschitzian_modelling.ipynb  analytical_problem.ipynb  data_problem.ipynb
desdeo-problem-master/tests/: test_Constraint.py  test_DBMOPP_generator.py  test_Objective.py  test_TestProblems.py  test_Variable.py  test_dummy_problem.py  test_engineering_real_world.py  test_river.py  test_vehicle_crashworthiness.py
desdeo-tools-master/: .gitignore  README.md  pyproject.toml  requirements.txt
desdeo-tools-master/desdeo_tools/interaction/: request.py  validators.py
desdeo-tools-master/desdeo_tools/maps/: __init__.py  preference_incorporated_space_RP.py
desdeo-tools-master/desdeo_tools/scalarization/: EpsilonConstraintMethod.py  Scalarizer.py  __init__.py
desdeo-tools-master/desdeo_tools/solver/: __init__.py
desdeo-tools-master/desdeo_tools/utilities/: __init__.py  fast_non_dominated_sorting.py  frozen.py  polytopes.py  preference_converters.py  quality_indicator.py
desdeo-tools-master/docs/: 404.rst  conf.py  examples.rst  index.rst
desdeo-tools-master/docs/notebooks/: Discrete_solver.ipynb  Reference_point.ipynb  Scalarization.ipynb  Scalarizer_and_ScalarSolver.ipynb
desdeo-tools-master/tests/: conftest.py
desdeo-tools-master/tests/scalarization/: test_asf.py  test_scalarization.py
desdeo-tools-master/tests/solver/: test_scalarsolver.py
docs/: .directory  404.rst  Makefile  README.md  algorithms.rst  api.rst  background.rst  conf.py  creating_models.md  creating_models_example.md  examples.rst  index.rst  modules.rst  operators.rst  pyRVEA.EAs.rst  pyRVEA.OtherTools.rst  pyRVEA.Population.rst  pyRVEA.Problem.rst  pyRVEA.Recombination.rst  pyRVEA.Selection.rst  pyRVEA.rst  pyrvea.EAs.rst  pyrvea.Problem.rst  pyrvea.Recombination.rst  readme.rst  requirements.txt  utilities.rst
examples/: CRVEA.ipynb  Data-driven optimization.ipynb  EvoNN, BioGP, and EvoDN2.ipynb  Example.ipynb  Example_New.ipynb  NIMBUS EA disconnected fronts.ipynb  NIMBUS EA test.ipynb  NIMBUS EA.ipynb  (+9 more)
(+479 files in other folders)
