[tool.poetry]
name = "desdeo_emo"
version = "1.3.3"
description = "The python version reference vector guided evolutionary algorithm."
authors = ["Bhupinder Saini", "Giomara Larraga", "Antti Luopajärvi"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.0,<3.10"
pyDOE = "^0.3.8"
plotly = "^4.1"
# gplearn = "^0.4.1"
# graphviz = "^0.11.1"
# xlrd = "^1.2"
# numpydoc = "^0.9.1"
scikit-learn = "^1.0.2"
desdeo-problem = ">=1.3.4"


[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
recommonmark = "^0.5.0"
sphinx_rtd_theme = "^0.4.3"
pylint = "^2.3"
#jupyter = "^1.0"
sphinx = "^3.2.1"
sphinx_autodoc_typehints = "^1.11.0"
sphinx-automodapi = "^0.12"
rstcheck = "^3.3.1"
nbsphinx = "^0.7.1"
seaborn = "^0.9.0"
tqdm = "^4.43.0"
ipykernel = "^5.4.3"
sphinx-autoapi = "^1.8.4"
Jinja2 = "2.11"
MarkupSafe = "2.0.1" # For nbconvert to work
notebook = "^6.4.10"
jupyter-contrib-nbextensions = "^0.5.1"
rise = "^5.7.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

