[tool.poetry]
name = "desdeo-emo-1"
version = "0.1.0"
description = ""
authors = ["amrzr <amznit@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
numpy = "^1.23.1"
sklearn = "^0.0"
scipy = "^1.9.0"
Pillow = "9.1"
matplotlib = "^3.5.2"
pyDOE = "^0.3.8"
plotly = "^5.9.0"
pandas = "^1.4.3"
optproblems = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
