[tool.poetry]
name = "desdeo_emo"
version = "1.5.0"
description = "The python version reference vector guided evolutionary algorithm."
authors = ["Bhupinder Saini", "Giomara Larraga", "Antti Luopajärvi"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyDOE = "^0.3.8"
# gplearn = "^0.4.1"
# graphviz = "^0.11.1"
# xlrd = "^1.2"
# numpydoc = "^0.9.1"
desdeo-problem = "^1.5"
plotly = "^5.10.0"


[tool.poetry.dev-dependencies]
flake8 = "^3.7"
recommonmark = "^0.5.0"
sphinx_rtd_theme = ">=1.2.0"
pylint = "^2.3"
#jupyter = "^1.0"
sphinx = "^6.1.0"
sphinx_autodoc_typehints = "^1.11.0"
sphinx-automodapi = "^0.12"
rstcheck = "^3.3.1"
nbsphinx = "^0.8.11"
seaborn = "^0.9.0"
tqdm = "^4.43.0"
ipykernel = "^5.4.3"
sphinx-autoapi = "^1.8.1"
Jinja2 = "^3.0"
MarkupSafe = "2.0.1" # For nbconvert to work
notebook = "^6.4.10"
jupyter-contrib-nbextensions = "^0.5.1"
rise = "^5.7.1"
pytest = ">=6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

