[tool.poetry]
name = "desdeo_problem"
version = "1.4.4"
description = "This package contains the problem classes for desdeo framework."
authors = ["Bhupinder Saini <bhupinder.s.saini@jyu.fi>", "Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
optproblems = "^1.2"
diversipy = "^0.8.0"
scikit-learn = ">=0.24.0"
desdeo-tools = "^1.7.0"
Shapely = "^1.8.0"
pytest = "^7.0.0"
descartes = "^1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
# jupyter = "^1.0"
sphinx = "^4.5.0"
rstcheck = "^3.3.1"
sphinx_rtd_theme = "^0.4.3"
sphinx_autodoc_typehints = "^1.10.3"
sphinx-automodapi = "^0.12"
nbsphinx = "^0.8.8"
IPython = "^7.15.0"
ipykernel = "^5.3.0"
nb-clean = "^1.4.3"
recommonmark = "^0.6.0"
Jinja2 = "^3.0"
pytest = "^7.1.2"
pandoc = "^2.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
