[tool.poetry]
name = "desdeo-tools"
version = "1.7.0"
description = "Generic tools and design language used in the DESDEO framework"
authors = ["Bhupinder Saini", "Giovanni Misitano", "Antti Luopajärvi"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
numpy = "^1.17"
pandas = "^1.0"
scipy = "^1.2"
numba = "^0.53.1"
hvwfg = "^1.0.2"
sphinx-autoapi = "^1.8.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pylint = "^2.4"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
# jupyter = "^1.0"
matplotlib = "^3.2.1"
pytest = "^5.4.1"
rope = "^0.16.0"
sphinx = "^3.1.1"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
sphinx_autodoc_typehints = "^1.10.3"
sphinx-automodapi = "^0.12"
rstcheck = "^3.3.1"
nbsphinx = "^0.7.1"
IPython = "^7.31.1"
ipykernel = "^5.3.0"
plotly = "^4.14.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
